# pipelinevisualizer

./: .gitignore  CMakeLists.txt  PipelineVisualizer.pro  README.md  README.txt  StaticData.cpp  StaticData.h  TODO  blockgenerator.h  blocknormalizer.cpp  booleangenerator.cpp  booleangeneratorprovider.cpp  booleangeneratorprovider.h  booleanlabel.cpp  booleanlabel.h  booleanpipeprovider.cpp  booleanpipetarget.cpp  booleanpipetarget.h  conditionalinputsignalpipe.cpp  conditionalinputsignalpipe.h  conditionaloutputsignalpipe.cpp  conditionaloutputsignalpipe.h  constSetting.cpp  constantdoublegeneratorprovider.cpp  counterkeeper.cpp  counterkeeper.h  defaultprocessgraphics.cpp  defaultprocessgraphics.h  doublegenerator.cpp  doublegenerator.h  doubleindexvector.cpp  doublelabel.cpp  doublelabel.h  doublepipefeed.cpp  doublepipefeed.h  doublepipeprovider.cpp  doublepipeprovider.h  doublepipetarget.cpp  doublepipetarget.h  fftpolartorectangularconverter.cpp  (+66 more)
DefaultSignalProcessor/: CMakeLists.txt  DefaultSignalProcessor.pro  Makefile  blockgenerator.cpp  blockgenerator.h  blocklengthsender.cpp  blocklengthsender.h  blocknormalizer.cpp  blocknormalizer.h  booleanand.cpp  booleanand.h  booleangenerator.cpp  booleangenerator.h  booleangeneratorprovider.cpp  booleangeneratorprovider.h  booleaninvert.cpp  booleaninvert.h  booleanor.cpp  booleanor.h  booleanxor.cpp  booleanxor.h  conditionalinputsignalpipe.cpp  conditionalinputsignalpipe.h  conditionaloutputsignalpipe.cpp  conditionaloutputsignalpipe.h  constantdoublegeneratorprovider.cpp  constantdoublegeneratorprovider.h  defaultsignalprocessor.cpp  defaultsignalprocessor.h  doubledivide.cpp  doubledivide.h  doublegenerator.cpp  doublegenerator.h  doubleinverse.cpp  doubleinverse.h  doubleisequal.cpp  doubleisequal.h  doubleisgreaterthan.cpp  doubleisgreaterthan.h  doubleislessthan.cpp  (+78 more)
ExtraSignalProcessingPlugin/: CMakeLists.txt  ExtraSignalProcessingPlugin.pro  extrasignalprocessor.cpp  extrasignalprocessor.h  hammingwindowdividesp.cpp  hammingwindowmultiplysp.cpp  hammingwindowmultiplysp.h  harmoniccalculator.cpp  pinknoiseremover.cpp  pinknoiseremover.h
FFtPlugin/: CMakeLists.txt  FFtPlugin.pro  fftplugin.cpp  fftplugin.h  fftpolartorectangularconverter.cpp  fftpolartorectangularconverter.h  fftprocessor.h  fftrectangulartopolarconverter.h  inversefftprocessor.cpp  inversefftprocessor.h
PipelineSignalProcessor/: CMakeLists.txt  PipelineSignalProcessor.pro  main.cpp  mainprogram.cpp  mainprogram.h  pipelineprofile.cpp  pipelineprofile.h  pluginlisteditor.cpp  pluginlisteditor.h  pluginlisteditor.ui  proccessgraphicspropertymodel.cpp  proccessgraphicspropertymodel.h  spproviderlistmodel.cpp  spproviderlistmodel.h  stringlisteditor.cpp  stringlisteditor.h  stringlisteditor.ui  templateprocessor.cpp  templateprocessor.h  templateproxy.cpp  templateproxy.h
PipelineVisualizer/: CMakeLists.txt  LogFile  Makefile  PipelineVisualizer.pro  PipelineVisualizer.pro.user.2.1pre1  TODO  blocklengthsender.h  blocknormalizer.h  booleangenerator.cpp  booleangeneratorprovider.h  booleanpipefeed.cpp  booleanpipefeed.h  booleanpipeprovider.cpp  booleanpipeprovider.h  booleanpipetarget.cpp  booleanpipetarget.h  conditionalinputsignalpipe.cpp  conditionaloutputsignalpipe.cpp  constSetting.cpp  constSetting.h  constantdoublegeneratorprovider.cpp  constantdoublegeneratorprovider.h  counterkeeper.cpp  counterkeeper.h  defaultprocessgraphics.h  doubleindexvector.cpp  doubleindexvector.h  doublemultiply.h  doublepipefeed.cpp  doublepipefeed.h  doublepipeprovider.cpp  doublepipeprovider.h  doublepipetarget.cpp  doublepipetarget.h  fftpolartorectangularconverter.cpp  functionpipe.h  graphabstraction.cpp  graphicproxywidgetgraphhack.cpp  graphicproxywidgetgraphhack.h  hammingwindowdividesp.cpp  (+66 more)
SoundPlugin/: CMakeLists.txt  SoundPlugin.pro  soundfeeder.cpp  soundfeeder.h  soundplugin.cpp  soundplugin.h  soundsink.cpp  soundsink.h
cmakeModules/: FindQWT5.cmake
fftw-3.2.2/: Makefile  config.h  config.status  libtool
fftw-3.2.2/api/: Makefile
fftw-3.2.2/api/.deps/: apiplan.Plo  configure.Plo  execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-c2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  execute.Plo  export-wisdom-to-file.Plo  export-wisdom-to-string.Plo  export-wisdom.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-system-wisdom.Plo  import-wisdom-from-file.Plo  import-wisdom-from-string.Plo  import-wisdom.Plo  malloc.Plo  map-r2r-kind.Plo  mapflags.Plo  mkprinter-file.Plo  mktensor-iodims.Plo  mktensor-iodims64.Plo  mktensor-rowmajor.Plo  plan-dft-1d.Plo  plan-dft-2d.Plo  plan-dft-3d.Plo  plan-dft-c2r-1d.Plo  plan-dft-c2r-2d.Plo  plan-dft-c2r-3d.Plo  plan-dft-c2r.Plo  plan-dft-r2c-1d.Plo  plan-dft-r2c-2d.Plo  plan-dft-r2c-3d.Plo  plan-dft-r2c.Plo  plan-dft.Plo  plan-guru-dft-c2r.Plo  (+25 more)
fftw-3.2.2/cell/: Makefile
fftw-3.2.2/cell/.deps/: cell.Plo  conf.Plo  copy.Plo  dft-direct-cell.Plo  plans-double.Plo  transpose.Plo
fftw-3.2.2/cell/spu/: Makefile
fftw-3.2.2/dft/: Makefile
fftw-3.2.2/dft/.deps/: bluestein.Plo  buffered.Plo  conf.Plo  ct.Plo  dftw-direct.Plo  dftw-directsq.Plo  dftw-generic.Plo  dftw-genericbuf.Plo  direct.Plo  generic.Plo  indirect-transpose.Plo  indirect.Plo  kdft-dif.Plo  kdft-difsq.Plo  kdft-dit.Plo  kdft.Plo  nop.Plo  plan.Plo  problem.Plo  rader.Plo  rank-geq2.Plo  solve.Plo  vrank-geq1.Plo  zero.Plo
fftw-3.2.2/dft/scalar/: Makefile
fftw-3.2.2/dft/simd/: Makefile
fftw-3.2.2/doc/: Makefile
fftw-3.2.2/doc/FAQ/: Makefile
fftw-3.2.2/genfft/: Makefile
fftw-3.2.2/kernel/: Makefile
fftw-3.2.2/kernel/.deps/: align.Plo  alloc.Plo  assert.Plo  awake.Plo  buffered.Plo  cpy1d.Plo  cpy2d-pair.Plo  cpy2d.Plo  ct.Plo  debug.Plo  extract-reim.Plo  hash.Plo  (+31 more)
fftw-3.2.2/libbench2/: Makefile
fftw-3.2.2/m4/: Makefile
fftw-3.2.2/rdft/: Makefile
fftw-3.2.2/reodft/: Makefile
fftw-3.2.2/simd/: Makefile
fftw-3.2.2/support/: Makefile
fftw-3.2.2/tests/: Makefile  bench
fftw-3.2.2/threads/: Makefile
fftw-3.2.2/tools/: Makefile  fftw-wisdom
unixbuild/: run.sh
(+322 files in other folders)
